# semantic-encoding-brain

./: .gitignore  README.md  WORKLOG.md  requirements.txt
.github/workflows/: pages.yml
docs/: TEAM_GUIDE.md  task.txt
notebooks/: assignment.ipynb
presentation/: README.md  index.html  package-lock.json  package.json  vite.config.js
presentation/public/assets/: corr_layer12.npy  corr_layer12_roi_colors_lh.json  corr_layer9.npy  (+3 more)
presentation/src/: App.jsx  styles.css
presentation/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
presentation/src-tauri/capabilities/: default.json
presentation/src-tauri/icons/: icon.icns
report/: .gitignore  experiment_main.tex  main.tex  refs.bib
report/chapters/: 00_abstract.tex  01_introduction.tex  02_predictive_coding.tex  03_semantic_mapping.tex  04_learning_mechanisms.tex  05_compositional_semantics.tex  06_decoding_reconstruction.tex  07_methodology.tex  08_crosslingual_multimodal.tex  09_discussion.tex  10_conclusion.tex
report/experiment_chapters/: 01_background.tex  02_data_alignment.tex  03_models_features.tex  04_encoding_evaluation.tex  05_text_results.tex  06_audio_results.tex  07_multimodal_results.tex  08_fusion_results.tex  09_roi_discussion.tex  10_conclusion.tex
report/scripts/: make_figures.py
src/: audio_pipeline.py  config.py  corr_layer9.npy  data.py  log.txt  modeling.py  run_audio_models.py  run_multimodal_fusion.py  run_multimodal_models.py  run_nonlinear_model.py  run_plot_corr_maps.py  run_roi_analysis.py  run_summary.py  run_text_models.py  text_pipeline.py  utils.py  viz.py
(+54 files in other folders)
